--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <script type="text/javascript" src="script/jqueryscript.js"></script>
   <title>Tic Tac Toe</title>
 </head>
-  <body>
-
+  <body id="container">
   <span>
     <div id="row1">
       <div class="box" id="0"></div>
@@ -25,6 +24,5 @@
       <div class="box" id="8"></div>
     </div>
   </span>
-
   </body>
 </html>
