added sounds to board

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p>Let's play a game.</p>
     <ul></ul>
   <h2 id="winner-text"></h2>
+  <button id="reset_board">reset</button>
   </div>
    
    <div id="column-right">
