changed play-by-play in game making it easier to read

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <div id="column-left">
   <h2>Tic Tac Toe</h2>
-    <p>Let's play a game.</p>
-    <ul></ul>
+    <p>Click on board to get started.</p>
+    <p id="playByPlay"></p>
   <h2 id="winner-text"></h2>
   <button id="reset_board">reset</button>
   </div>
